--- a/.github/workflows/pytest-action.yml
+++ b/.github/workflows/pytest-action.yml
@@ -58,3 +58,9 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: artifacts/**/*.xml
+
+      - name: List Files
+        run: |
+          pwd
+          ls
+          
